samples/_failures_safe/1761708050_b0a84a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c4b1e79.c: In function ‘main’:
./samples/SAFE/__tmp_2c4b1e79.c:148:9: error: expected declaration or statement at end of input
  148 |         printf("Matrix must be square\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2c4b1e79.c:148:9: error: expected declaration or statement at end of input
